2008-08-05 [colin]	3.5.0cvs50

	* src/action.c
	* src/addr_compl.c
	* src/addrbook.c
	* src/addrcindex.c
	* src/addrduplicates.c
	* src/addrharvest.c
	* src/enriched.c
	* src/html.c
	* src/ldif.c
	* src/main.c
	* src/mimeview.c
	* src/mutt.c
	* src/pine.c
	* src/procmime.c
	* src/vcard.c
	* src/wizard.c
	* src/common/socket.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
	* src/gtk/menu.c
	* src/plugins/spamassassin/spamassassin.c
		More undeprecation (Glib)

2008-08-05 [colin]	3.5.0cvs49

	* src/prefs_account.c
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
	* src/gtk/Makefile.am
	* src/gtk/claws-marshal.list
	* src/gtk/colorlabel.c
	* src/gtk/colorsel.c
	* src/gtk/foldersort.c
	* src/gtk/gtkaspell.c
	* src/gtk/gtkcmclist.c
	* src/gtk/gtkcmclist.h
	* src/gtk/gtkcmctree.c
	* src/gtk/gtkcmctree.h
	* src/gtk/gtkcmoptionmenu.c
	* src/gtk/gtkcmoptionmenu.h
	* src/gtk/gtksctree.c
	* src/gtk/gtksctree.h
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
	* src/gtk/gtkvscrollbutton.c
	* src/gtk/menu.c
	* src/gtk/menu.h
	* src/gtk/quicksearch.c
	* src/plugins/dillo_viewer/dillo_viewer.c
	* src/plugins/pgpcore/select-keys.c
		Try to finish yesterday's commit

2008-08-04 [colin]	3.5.0cvs48

	* src/addressadd.c
	* src/addressbook.c
	* src/addressbook_foldersel.c
	* src/addressitem.h
	* src/addrgather.c
	* src/browseldap.c
	* src/compose.c
	* src/compose.h
	* src/editaddress.c
	* src/editaddress_other_attributes_ldap.c
	* src/editgroup.c
	* src/editldap_basedn.c
	* src/folderview.c
	* src/folderview.h
	* src/grouplistdialog.c
	* src/image_viewer.c
	* src/imap_gtk.c
	* src/importldif.c
	* src/main.c
	* src/mainwindow.c
	* src/message_search.c
	* src/mh_gtk.c
	* src/mimeview.c
	* src/mimeview.h
	* src/news_gtk.c
	* src/noticeview.h
	* src/prefs_account.c
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
	* src/prefs_msg_colors.c
	* src/prefs_summaries.c
	* src/statusbar.c
	* src/stock_pixmap.c
	* src/summary_search.c
	* src/summaryview.c
	* src/summaryview.h